--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -2,6 +2,17 @@
     max-width: 960px;
     margin: auto;
 }
+header sup{
+    font-size: 0.4em;
+}
+header a{
+    text-decoration: none;
+    cursor: pointer;
+    color: #29c5e6;
+}
+header a:hover{
+    color: #ff803f;
+}
 
 .error, .info{
     margin-top:30px;
@@ -20,7 +31,6 @@
     padding-bottom: 15px;
     font-size: 1.21em;
 }
-
 .error .label, .info .label{
     font-weight: bold;
     font-size: 0.8em;
@@ -28,40 +38,36 @@
     padding-left: 15px;
     padding-bottom: 5px;
 }
-
-.article{
+article{
     margin: 10px 0;
     display: block;
 }
-
-.article .image{
+article .image{
     float: left;
     margin: 0 10px;
 }
-
-.article::after {
+article::after {
     content:"";
     display:block;
     clear:both;
 }
-
-.article .image img{
-    height: auto;
-    width: 250px;
+article .image {
+    max-width: 30%;
 }
-
-.article .asset a{
+article .image img{
+    height: auto;
+    width: 100%;
+}
+article .asset a{
     text-decoration: none;
     cursor: pointer;
     color: #000;
     font-family: Proxima Nova,Proxima-Nova,proxima-nova,Helvetica,Arial,sans-serif;
 }
-
-.article .asset h3:hover{
+article .asset h3:hover{
     color: #29c5e6;
 }
-
-.article .asset h3{
+article .asset h3{
     font-size: 1.294em;
     line-height: 1.1em;
     text-transform: none;
@@ -69,22 +75,19 @@
     font-weight: 600;
     letter-spacing: -.009em;
 }
-
-.article .asset p{
+article .asset p{
     font-size: .941em;
     line-height: 1.25em;
 }
-.article .asset .publishat{
+article .asset .publishat{
     font-weight: bold;
     font-size: 0.7em;
 }
-
-.article .asset .byline{
+article .asset .byline{
     font-weight: bold;
     font-size: 0.8em;
     color: #ff803f;
 }
-
 header{
     color: #29c5e6;
     font-size: 2.32em;
@@ -94,7 +97,6 @@ header{
     font-style: italic;
     padding-top: 20px;
 }
-
 footer{
     color: #bbbbbb;
     font-size: 0.7em;
