--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -52,7 +52,7 @@ article::after {
     clear:both;
 }
 article .image {
-    max-width: 30%;
+    width: 30%;
 }
 article .image img{
     height: auto;
